fixed container spacing

--- a/css/main.css
+++ b/css/main.css
@@ -224,13 +224,8 @@ p{
     padding: 65px 0 65px 0;
 } */
 
-#vid{
-    height: 
-}
 .cont{
-    padding: 2.5vw;
-    margin-top: 1.5vw;
-    margin-bottom: 1.5vw;
+    padding: 4vw 2.5vw 4vw 2.5vw;
 }
 
 #donations{
